--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@ body {
   font-style: normal;
 }
 
+a {
+  text-decoration: none;
+}
+
 h1,
 h2,
 h3,
@@ -326,6 +330,12 @@ h3 {
 }
 /* About Us Ends */
 /* My Portfolio Starts */
+
+.youtube--video {
+  width: 600px;
+  height: 300px;
+}
+
 .portfolio--section {
   display: flex;
   padding: 112px 85px;
@@ -335,9 +345,10 @@ h3 {
 }
 .portfolio--container-box {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
+  text-align: center;
 }
 .portfolio--container {
   display: flex;
@@ -364,6 +375,7 @@ h3 {
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
+
   flex: 1 0 0;
   background: #ffff;
   box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
@@ -564,6 +576,10 @@ input[type="checkbox"] {
 @media only screen and (max-width: 1200px) {
   .btn-outline-primary {
     display: none;
+  }
+  .youtube--video {
+    width: 300px;
+    height: 150px;
   }
   .hero--section {
     display: flex;
